# openapi.yaml
@@ -5,6 +5,8 @@ info:
 servers:
   - url: http://localhost:8000
 tags:
+  - name: authentication
+    description: Authentication operations
   - name: incidents
     description: Incident management
   - name: components
@@ -12,6 +14,104 @@ tags:
   - name: v1
     description: Deprecated API schema for backward compatibility
 paths:
+  /auth/login:
+    get:
+      summary: Redirect to the keycloak auth realm.
+      tags:
+        - authentication
+      parameters:
+        - name: state
+          in: query
+          description: The state for oauth2 request. It's a base64 encoded JSON object. The object should contain the `code_challenge` and `callback_url`.
+          required: true
+          schema:
+            type: string
+            example: eyJjb2RlX2NoYWxsZW5nZSI6IjY0Y2MwYWIxYTg4ZWZlYWNkNjRmYTc5ZWNlMzRlZGUwNDRjZDZkMWMzMmMyYTFjMjc5MWU1YmEyMDYzYzFiZWEiLCJjYWxsYmFja191cmwiOiJodHRwOi8vbG9jYWxob3N0OjUxNzMvY2FsbGJhY2sifQ
+      responses:
+        '303':
+          description: The redirect to a keycloak auth page.
+        '400':
+          description: The request is invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestGeneralError'
+  /auth/callback:
+    get:
+      summary: The callback URL for the keycloak auth realm. It exchanges the code from keycloak and store tokens for a user. It redirects to the frontend callback URL from the state parameter.
+      tags:
+        - authentication
+      parameters:
+        - name: code
+          in: query
+          description: The code from the keycloak auth realm.
+          required: true
+          schema:
+            type: string
+            example: 7b3b3b3b-3b3b-3b3b-3b3b-3b3b3b3b3b3b
+        - name: state
+          in: query
+          description: The state from the authentication request.
+          required: true
+          schema:
+            type: string
+            example: eyJjb2RlX2NoYWxsZW5nZSI6IjY0Y2MwYWIxYTg4ZWZlYWNkNjRmYTc5ZWNlMzRlZGUwNDRjZDZkMWMzMmMyYTFjMjc5MWU1YmEyMDYzYzFiZWEiLCJjYWxsYmFja191cmwiOiJodHRwOi8vbG9jYWxob3N0OjUxNzMvY2FsbGJhY2sifQ
+      responses:
+        '303':
+          description: The redirect to a frontend callback url.
+        '400':
+          description: Return this code with a redirect to a frontend url.
+          headers:
+            Set-Cookie:
+              description: Error cookie set by the server.
+              schema:
+                type: string
+                example: error=some_error_message; Path=/; HttpOnly
+  /auth/token:
+    post:
+      summary: Retrieve a token for an authorised client.
+      tags:
+        - authentication
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TokenPostRequest'
+        required: true
+      responses:
+        '200':
+          description: Return access and refresh tokens for a user.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenPostResponse'
+        '400':
+          description: The request is invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestGeneralError'
+  /auth/logout:
+    put:
+      summary: Logout user session.
+      tags:
+        - authentication
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TokenPutRequest'
+        required: true
+      responses:
+        '204':
+          description: The request is successful.
+        '400':
+          description: The request is invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestGeneralError'
+
   /v2/components:
     get:
       summary: Get all components.
@@ -190,6 +290,7 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Incident not found.
+
   /v1/component_status:
     get:
       summary: Get all components.
@@ -220,7 +321,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/IncidentV1'
-
   /v1/incidents:
     get:
       summary: Get all incidents.
@@ -236,6 +336,28 @@ paths:
 
 components:
   schemas:
+    TokenPostRequest:
+      type: object
+      required:
+        - code_verifier
+      properties:
+        code_verifier:
+          type: string
+          example: "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
+    TokenPostResponse:
+      type: object
+      properties:
+        access_token:
+          type: string
+        refresh_token:
+          type: string
+    TokenPutRequest:
+      type: object
+      required:
+        - refresh_token
+      properties:
+        refresh_token:
+          type: string
     Component:
       type: object
       required:
@@ -572,3 +694,9 @@ components:
         errMsg:
           type: string
           example: internal server error
+    BadRequestGeneralError:
+      type: object
+      properties:
+        errMsg:
+          type: string
+          example: "any error message"
